first session progress

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "TodoContext": "Host=localhost;Database=postgres;Username=postgres;Password=almafa"
+    "TodoContext": "Host=db;Database=postgres;Username=postgres;Password=almafa"
   }
 }
