--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,9 +7,7 @@ services:
       - "9090:80"
     environment:
       DOTNET_ENVIRONMENT: "Container"
-    deploy:
-      restart_policy:
-        condition: on-failure
+    restart: always
 
   db:
     image: postgres
@@ -17,6 +15,4 @@ services:
       POSTGRES_PASSWORD: "almafa"
     volumes:
       - "./data:/var/lib/postgresql/data:rw"
-    deploy:
-      restart_policy:
-        condition: on-failure
+    restart: always
